--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cypress-multi-reporters": "^1.5.0",
     "cypress-xpath": "^1.6.2",
     "faker": "^5.4.0",
+    "json2csv": "^5.0.6",
     "remove-node-modules": "^1.7.6"
   }
 }
